# fdapde-py

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  pyproject.toml  setup.py
src/: functional_basis.cpp  main.cpp  mesh.cpp  pde.cpp  regression.cpp
src/fdapdepy/: __init__.py  domain.py  function.py  functional_basis.py  mesh.py  operators.py  pde.py  regression.py  utils.py
src/include/: functional_basis.h  mesh.h  pde.h  regression.h  utils.h
tests/: pde.ipynb  sr_pde.ipynb  srpde.py  test.py
tests/unit_square/: boundary.txt  edges.txt  elements.txt  neigh.txt  points.txt
